# clair-operator

./: .dockerignore  .gitignore  .yamllint  Cargo.toml  Dockerfile  Makefile  NOTICE  PROJECT  README.md  bundle.Dockerfile  clippy.toml  deny.toml  generate.go  go.mod  go.sum  main.go  rust-toolchain.toml  tools.go
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: Cargo.toml
api/patch/v1alpha1/: Clair.yaml  Matcher.yaml
api/src/: lib.rs  v1alpha1.rs
api/v1alpha1/: clair_types.go  clair_webhook.go  common.go  groupversion_info.go  indexer_types.go  matcher_types.go  mutating_webhook.go  mutating_webhook_test.go  notifier_types.go  template.go  validating_webhook.go  validating_webhook_test.go  validation_webhook_test.go  webhook_suite_test.go  zz_generated.deepcopy.go
api/v1alpha1/testdata/: bad_templating.yaml  invalid.yaml  missing_service.yaml  notyaml.yaml  simple.yaml  templating.rendered.yaml  templating.yaml  with_secret.rendered.yaml  with_secret.yaml
bundle/manifests/: clair-indexer-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-indexer-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-manager-config_v1_configmap.yaml  clair-manager-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-matcher-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-matcher-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-notifier-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-notifier-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-operator-controller-manager-metrics-service_v1_service.yaml  clair-operator-manager-config_v1_configmap.yaml  clair-operator-metrics-reader_rbac.authorization.k8s.io_v1_clusterrole.yaml  clair-operator.clusterserviceversion.yaml  clair-webhook-service_v1_service.yaml  clair.projectquay.io_clairs.yaml  clair.projectquay.io_indexers.yaml  clair.projectquay.io_matchers.yaml  clair.projectquay.io_notifiers.yaml  indexer-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  indexer-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  manager-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  matcher-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  matcher-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  notifier-editor-role_rbac.authorization.k8s.io_v1_clusterrole.yaml  notifier-viewer-role_rbac.authorization.k8s.io_v1_clusterrole.yaml
bundle/metadata/: annotations.yaml
clair_config/: Cargo.toml  build.rs
clair_config/go/: go.mod  go.sum  main.go
clair_config/src/: lib.rs  sys.rs
clair_templates/: Cargo.toml
clair_templates/fixtures/clair/: configmap.txtar  indexer.txtar  job.json  job_admin_post.txtar  job_admin_pre.txtar  matcher.txtar  notifier.txtar
clair_templates/fixtures/indexer/: deployment.txtar  horizontalpodautoscaler.txtar  service.txtar
clair_templates/fixtures/tests/: config_source.txtar
clair_templates/src/: lib.rs
config/crd/: clairs.projectclair.io.yaml  indexers.projectclair.io.yaml  kustomization.yaml  matchers.projectclair.io.yaml  notifiers.projectclair.io.yaml  updaters.projectclair.io.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml
config/manager/: controller_manager_config.yaml  deployment.yaml  kustomization.yaml  manager.yaml  namespace.yaml
config/manifests/: csv.yaml  icon.yaml  (+1 more)
controller/: Cargo.toml  build.rs
controller/etc/: README.md  default_config.yaml  indexer_dropin.json-patch  webhooks.yaml
controller/etc/templates/: cronjob-updater.yaml-patch  cronjob.yaml  deployment-indexer.yaml-patch  deployment-matcher.yaml-patch  deployment.yaml  horizontalpodautoscaler.yaml  ingress.yaml  service-matcher.yaml-patch  service-notifier.yaml-patch  service.yaml
controller/etc/tests/: kind-1.25.yaml
controller/go/config/: go.mod  go.sum
controller/src/: clairs.rs  helpers.rs  indexers.rs  lib.rs  main.rs  matchers.rs  metrics.rs  subresource.rs  telemetry.rs  templates.rs  testing.rs  updaters.rs  util.rs  webhook.rs  worker.rs
controller/src/config/: mod.rs  sys.rs
controller/src/templates/: cronjob.json  default_config.json  deployment-indexer.json-patch  deployment-indexer.yaml-patch  deployment-notifier.yaml-patch  deployment.json  horizontalpodautoscaler-indexer.yaml-patch  horizontalpodautoscaler-matcher.yaml-patch  ingress.yaml  mod.rs  service-indexer.json-patch  service-indexer.yaml-patch  service.json
controller/src/templates/_fixture/indexer/: cronjob.json  deployment.json  horizontalpodautoscaler.json  service.json
controller/src/webhook/: mod.rs  mutate.rs  validate.rs
controller/tests/: clair.rs  indexer.rs  updater.rs  webhook.rs  webhooks.rs
controller/tests/util/: mod.rs
controllers/: clair_controller.go  common.go  fs_adapter.go  images.go  indexer_controller.go  indexer_test.go  kustomize.go  kustomize_test.go  matcher_controller.go  matcher_test.go  notifier_controller.go  service_common.go  suite_test.go  templates.go
doc/: Makefile  owners.gv  refs.gv  states.gv
gateway_networking_k8s_io/: Cargo.toml  Makefile
gateway_networking_k8s_io/src/: lib.rs
gateway_networking_k8s_io/src/v1/: backendtlspolicies.rs  gatewayclasses.rs  gateways.rs  grpcroutes.rs  httproutes.rs  referencegrants.rs
hack/: boilerplate.go.txt
packagemanifests/: clair-operator.package.yaml
testbin/: .gitignore
webhook/: Cargo.toml
webhook/src/: lib.rs
webhook/tests/: validate.rs
webhook/tests/util/: mod.rs
xtask/: Cargo.toml  README.md
xtask/go/: go.mod  go.sum
xtask/go/schemagen/: main.go
xtask/src/: check.rs  find.rs  generate.rs  lib.rs  main.rs
xtask/src/manifests/: mod.rs
xtask/src/manifests/csv/: csv.yaml  kustomization.yaml  required.yaml
xtask/src/manifests/csv/owned/: clair.yaml  indexer.yaml  matcher.yaml  notifier.yaml
xtask/src/manifests/rbac/: indexer_editor_role.yaml  indexer_viewer_role.yaml  matcher_editor_role.yaml  role.yaml  updater_editor_role.yaml
xtask/src/manifests/webhook/: validating.yaml
xtask/src/olm/: cluster_service_versions.rs  mod.rs
(+130 files in other folders)
