[workspace]
resolver = "2"
members = [
	"api",
	"clair_config",
	"controller",
	"webhook",
	"xtask",
]
default-members = [
	"api",
	"clair_config",
	"controller",
	"webhook",
]

[workspace.package]
version = "0.1.0"
authors = ["The clair-operator Authors"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4", features = ["cargo", "env", "string"] }
futures = "0.3"
hyper = { version = "0.14", features = ["server", "http1"] }
json-patch = "1.0"
k8s-openapi = { version = "0.20", default-features = false, features = ["schemars"] }
kube = { version = "0.86", features = ["runtime", "derive", "client", "config", "admission", "openssl-tls", "ws", "gzip", "jsonpatch"] }
metrics = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net", "signal"] }
tracing = "0.1"

[profile.dev]
split-debuginfo = "unpacked"
[profile.dev.build-override]
opt-level = 3
[profile.release]
debug = 1
lto = "thin"

[workspace.metadata.controller.default]
clair-image-tag = "nightly"
[workspace.metadata.controller.release]
clair-image-tag = "4.6.1"

[workspace.metadata.ci]
kind-version = ['1.25']
