[workspace]
resolver = "3"
members = [
	"api",
	"clair_config",
	"clair_templates",
	"controller",
	"gateway_networking_k8s_io",
	"xtask",
]
default-members = [
	"controller",
]

[workspace.package]
license = "Apache-2.0"
version = "0.1.0"
authors = ["The clair-operator Authors"]
edition = "2024"
rust-version = "1.92"
publish = false

[workspace.lints.rust]
arithmetic_overflow = "deny" # Prevent operations that would cause integer overflow
unnecessary_transmutes = "deny" # Prevent unneeded transmutation

[workspace.lints.clippy]
checked_conversions = "deny" # Suggest using checked conversions between numeric types
cast_possible_truncation = "deny" # Detect when casting might truncate a value
cast_sign_loss = "deny" # Detect when casting might lose sign information
cast_possible_wrap = "deny" # Detect when casting might cause value to wrap around
cast_precision_loss = "deny" # Detect when casting might lose precision
integer_division = "deny" # Highlight potential bugs from integer division truncation
arithmetic_side_effects = "deny" # Detect arithmetic operations with potential side effects
unchecked_time_subtraction = "deny" # Ensure duration subtraction won't cause underflow
#unwrap_used = "deny" # Discourage using .unwrap() which can cause panics
#expect_used = "deny" # Discourage using .expect() which can cause panics
panicking_unwrap = "deny" # Prevent unwrap on values known to cause panics
option_env_unwrap = "deny" # Prevent unwrapping environment variables which might be absent
#indexing_slicing = "deny" # Avoid direct array indexing and use safer methods like .get()
join_absolute_paths = "deny" # Prevent issues when joining paths with absolute paths
serde_api_misuse = "deny" # Prevent incorrect usage of Serde's serialization/deserialization API
uninit_vec = "deny" # Prevent creating uninitialized vectors which is unsafe
transmute_ptr_to_ref = "deny" # Prevent unsafe transmutation from pointers to references
transmute_undefined_repr = "deny" # Detect transmutes with potentially undefined representations

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn" # Warn if crates are missing documentation.

[workspace.dependencies]
clap = { version = "4", features = ["cargo", "env", "string"] }
futures = "0.3"
json-patch = "4"
metrics = "0.24"
schemars = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["net", "signal"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[workspace.dependencies.k8s-openapi]
version = "0.27"
features = ["schemars"]

[workspace.dependencies.kube]
version = "3.0"
default-features = false

[profile.dev]
split-debuginfo = "unpacked"
[profile.dev.package."*"]
opt-level = 3
[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = "thin"

[workspace.metadata.controller.default]
clair-image-tag = "nightly"
[workspace.metadata.controller.release]
clair-image-tag = "4.9.0"

[workspace.metadata.ci]
kind-version = "0.31.0"
kube-version = "1.35.0"
kustomize-version = "5.6.0"
operator-sdk-version = "1.39.2"
operator-api-version = "0.39.0"
opm-version = "1.51.0"
istio-version = "1.25.2"
gateway-api-version = "1.4.1"
kopium-version = "0.22.5"
