[package]
name = "api"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true

[dependencies.kube]
version = "0.99"
default-features = false
features = ["derive"]

[dependencies.k8s-openapi]
workspace = true
features = ["schemars"]

[dependencies.validator]
version = "0.20"
features = ["derive"]
