[package]
name = "api"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true

[dependencies.validator]
version = "0.20"
features = ["derive"]
