[package]
name = "clair_config"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
api = { path = "../api" }

json-patch = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_25"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

libc = "0.2"
tracing = "0.1"

[build-dependencies]
bindgen = "0.68"
serde = { workspace = true }

[dev-dependencies]
