[package]
name = "clair_config"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }

json-patch = { workspace = true }
k8s-openapi = { workspace = true , features = ["schemars"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

libc = "0.2"
tracing = "0.1"

[build-dependencies]
bindgen = "0.71"
serde = { workspace = true }
