[package]
name = "clair_config"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
json-patch.workspace = true
serde_json.workspace = true
tracing.workspace = true

libc = "0.2"

[dependencies.k8s-openapi]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true
features = [ "macros", "rt" ]

[build-dependencies]
bindgen = "0.72"

[features]
default = []
k8s = ["dep:k8s-openapi"]
tokio = ["dep:tokio"]
