[package]
name = "clair_templates"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }

k8s-openapi.workspace = true
kube-core.workspace = true
serde_json.workspace = true
serde.workspace = true

kcr_gateway_networking_k8s_io = "1"
thiserror = "2"

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dev-dependencies]
assert-json-diff = "2"
jsonpath-rust = "1"
simple_txtar = "1.1"
