[package]
name = "clair_templates"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
gateway_networking_k8s_io = { path = "../gateway_networking_k8s_io" }

k8s-openapi.workspace = true
kube.workspace = true
serde_json.workspace = true
serde.workspace = true

thiserror = "2"

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dev-dependencies]
assert-json-diff = "2"
jsonpath-rust = "1"
simple_txtar = "1.1"

[dev-dependencies.k8s-openapi]
workspace = true
features = ["v1_35"]

[features]
default = ["latest"]
__check = ["k8s-openapi/v1_35"]

latest = ["v1_5"]
earliest = ["v1_4"]
v1_4 = []
v1_5 = []
