[package]
name = "controller"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
test_ci = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
api = { path = "../api" }
clair_config = { path = "../clair_config" }
clair_templates = { path = "../clair_templates" }
gateway_networking_k8s_io = { path = "../gateway_networking_k8s_io" }

clap.workspace = true
futures.workspace = true
json-patch.workspace = true
kube.workspace = true
metrics.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true

anyhow = "1"
bytes = "1"
is-terminal = "0.4"
openssl = "0.10"
regex = "1"
thiserror = "2"
tokio-native-tls = "0.3"
tokio-util = "0.7"

[dependencies.axum]
version = "0.8"
features = ["http1", "json", "tracing"]

[dependencies.axum-server]
version = "0.8"
features = ["tls-openssl"]

[dependencies.k8s-openapi]
workspace = true
features = ["earliest"]

[dependencies.metrics-exporter-prometheus]
version = "0.18"
default-features = false
features = ["http-listener"]

[dependencies.opentelemetry]
version = "0.31"
features = ["trace", "metrics"]

[dependencies.opentelemetry-otlp]
version = "0.31"
optional = true
default-features = false
features = ["trace", "grpc-tonic"]

[dependencies.opentelemetry_sdk]
version = "0.31"
features = ["rt-tokio"]

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.tower-http]
version = "0.6"
features = ["trace"]

[dependencies.tracing-opentelemetry]
version = "0.32"
features = ["metrics"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json", "env-filter"]

[dev-dependencies]
assert-json-diff = "2"
http = "1"
jsonpath-rust = "1"
tower = "0.5"
tower-test = "0.4"
simple_txtar = "1.1"

[dev-dependencies.reqwest]
version = "0.13"
default-features = false
features = ["native-tls", "json"]

[dev-dependencies.test-log]
version = "0.2"
default-features = false
features = ["trace"]
