[package]
name = "gateway_networking_k8s_io"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true

automod = "1.0"

[dependencies.k8s-openapi]
workspace = true
features = ["schemars"]

[dependencies.kube]
version = "0.99"
default-features = false
features = ["derive"]
