[package]
name = "gateway_networking_k8s_io"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true

automod = "1.0"
