[package]
name = "gateway_networking_k8s_io"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# Prevent some warnings in the generated documentation.
[lints.clippy]
tabs_in_doc_comments = "allow"
doc_lazy_continuation = "allow"

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
schemars.workspace = true
serde.workspace = true

automod = "1.0"
