[package]
name = "xtask"
license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }

clap.workspace = true
kube.workspace = true
json-patch.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true

scopeguard = "1"
signal-hook = "0.3"
xshell = "0.2"

[dependencies.k8s-openapi]
workspace = true
features = ["earliest"]
